         (Alberto).
20130520 man/fmfconv.1: fix syntax error (patch #311) (Alberto).
20130526 Makefile.am: distribute ChangeLog in Windows packages (Sergio).
20130526 Makefile.am: add compat/getopt.h into the dist tarball (Sergio).
20130928 Makefile.am,compat/win32/distribution.mk: take Windows distribution
         rules out of main Makefile.am (Sergio).
20131013 configure.ac,Makefile.am,compat/{Makefile.am,amiga/Makefile.am,
         unix/Makefile.am,win32/Makefile.am},hacking/Makefile.am,m4/Makefile.am,
         man/Makefile.am: use 'subdir-objects' option as advised by automake
         1.14 to place object files in subdirectories (more from patch #317)
         (Sergio).
20131013 configure.ac: replace obsolete ac_cv_prog_gcc with ac_cv_c_compiler_gnu
         (Sergio).
20131215 rzxtool.c: fix snapshot insertion in rzx recordings (Sergio).
20140113 man/rzxtool.1,rzxtool.c: add option for finalising rzx recordings
         (part of bug #305) (Sergio).
20140113 rzxdump.c: show block number as is needed for some operations with
         rzxtool (Sergio).
20140216 fmfconv.c,raw2hdf.c,rzxtool.c,scl2trd.c,snap2tzx.c,snapconv.c,
         tape2wav.c: fix leaks and possible null pointer dereferences (thanks,
         cppcheck) (Sergio).
20140216 fmfconv_ff.c: FFmpeg no longer provides backward compatible CodecID as
         alias for AVCodecID (Sergio).
20140414 tape2wav.c: correct default WAV sample rate (thanks, Alberto Garcia)
         (patch #324) (Santiago Vila).
20140424 fmfconv.c: correct vga resolution (Sergio).
20140507 m4/iconv.m4: update iconv to version from gettext-0.18.2 (Fred).
20140507 autogen.sh: select glibtoolize where required (Sergio).
20140511 m4/{Makefile.am,lib-ld.m4,lib-link.m4,lib-prefix.m4}: ensure
         definitions of AC_LIB_PREPARE_PREFIX, AC_LIB_RPATH,
         AC_LIB_LINKFLAGS_BODY and AC_LIB_APPENDTOVAR are always available
         (patch #325) (Fred).
20140511 autogen.sh: fix line break (Sergio).